fix: adjust bg.jpg position 85% 75% on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -382,7 +382,7 @@
     background-position: 70% 60%;
   }
   .slide-bg1 {
-    background-position: 95% 70%;
+    background-position: 85% 75%;
   }
   .slide-bg3 {
     background-position: 70% 60%;
